[gd_scene load_steps=8 format=2]

[ext_resource path="res://gui/package_list.gd" type="Script" id=1]
[ext_resource path="res://interactables/gui_tabs_control.gd" type="Script" id=2]
[ext_resource path="res://gui/fonts/roboto_bold_18.tres" type="DynamicFont" id=3]
[ext_resource path="res://gui/themes/gui_base_theme.tres" type="Theme" id=4]
[ext_resource path="res://gui/themes/action_button_theme.tres" type="Theme" id=5]
[ext_resource path="res://gui/icons/left-arrow-16x16.png" type="Texture" id=6]
[ext_resource path="res://gui/icons/right-arrow-16x16.png" type="Texture" id=7]

[node name="ReceivedPackages" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
mouse_filter = 2

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 300.0
margin_bottom = 680.0
rect_min_size = Vector2( 300, 0 )

[node name="bg" type="ColorRect" parent="HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="TabController" type="VBoxContainer" parent="HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Control/TabController"]
margin_right = 290.0
margin_bottom = 40.0
size_flags_horizontal = 3
alignment = 1

[node name="prev" type="Button" parent="HBoxContainer/Control/TabController/HBoxContainer"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
icon = ExtResource( 6 )
icon_align = 1

[node name="current_tab_name" type="Label" parent="HBoxContainer/Control/TabController/HBoxContainer"]
unique_name_in_owner = true
margin_left = 44.0
margin_top = 9.0
margin_right = 246.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1

[node name="next" type="Button" parent="HBoxContainer/Control/TabController/HBoxContainer"]
unique_name_in_owner = true
margin_left = 250.0
margin_right = 290.0
margin_bottom = 40.0
grow_horizontal = 0
rect_min_size = Vector2( 40, 40 )
icon = ExtResource( 7 )
icon_align = 1

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/Control/TabController"]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 290.0
margin_bottom = 620.0
size_flags_vertical = 3
tabs_visible = false

[node name="take_all" type="Button" parent="HBoxContainer/Control/TabController"]
margin_left = 105.0
margin_top = 624.0
margin_right = 185.0
margin_bottom = 645.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 80, 20 )
size_flags_horizontal = 4
theme = ExtResource( 5 )
text = "take all"

[node name="exit" type="Button" parent="HBoxContainer/Control/TabController"]
margin_left = 105.0
margin_top = 649.0
margin_right = 185.0
margin_bottom = 670.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 80, 20 )
size_flags_horizontal = 4
theme = ExtResource( 5 )
text = "exit"

[connection signal="empty" from="HBoxContainer/Control/TabController" to="." method="_on_TabController_empty"]
[connection signal="pressed" from="HBoxContainer/Control/TabController/HBoxContainer/prev" to="HBoxContainer/Control/TabController" method="_on_prev_pressed"]
[connection signal="pressed" from="HBoxContainer/Control/TabController/HBoxContainer/next" to="HBoxContainer/Control/TabController" method="_on_next_pressed"]
[connection signal="child_entered_tree" from="HBoxContainer/Control/TabController/TabContainer" to="HBoxContainer/Control/TabController" method="_on_TabContainer_child_entered_tree"]
[connection signal="pressed" from="HBoxContainer/Control/TabController/take_all" to="." method="_on_take_all_pressed"]
[connection signal="pressed" from="HBoxContainer/Control/TabController/exit" to="." method="_on_exit_pressed"]
